<resources>
    <string name="app_name">Asclepius</string>
    <string name="camera_x">CameraX</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Galeri</string>
    <string name="analyze">Analyze</string>
    <string name="result">Hasil Analisis</string>
    <string name="image_classifier_failed">Image classifier failed to initialize. See error logs for details</string>
    <string name="save">Save</string>
    <string name="history_menu">History</string>
    <string name="displayResult">displayResult</string>
    <string name="date">date</string>
    <string name="history_icon_description">history description</string>
    <string name="delete_description">delete_description</string>
    <string name="article_menu">Article</string>
    <string name="article_image_description">article_image_description</string>
    <string name="articleTitle">Article Title</string>
    <string name="articleDescription">Article Description</string>
</resources>