<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="4dp"
    android:padding="8dp"
    android:background="#F0F0F0"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/imageViewArticle"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_place_holder"
            android:contentDescription="@string/article_image_description" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp">

            <TextView
                android:id="@+id/textViewArticleTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="@string/articleTitle" />

            <TextView
                android:id="@+id/textViewArticleDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#a9a9a9"
                android:textSize="12sp"
                android:textStyle="normal"
                tools:text="@string/articleDescription" />
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>